--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ a:hover {
     margin-top: 0px;
     top: 0;
     left: 0;
-    background-color: #7ab4e0ff;
+    background-color: #024FCF;
     overflow-x: hidden;
     padding-top: 20px;
     overflow: visible;
