--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,10 @@ footer  {
 
 }
 
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
 
 .tooltip .tooltiptext {
   visibility: hidden;
