--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,7 @@ footer  {
     border-radius: 0.4rem;
     padding: inherit;
     box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2), 0 2px 8px 0 rgba(0,0,0,0.19);
-    width: 200px;
+    width: 90%;
     height: 100px;
 }
 
@@ -374,7 +374,9 @@ footer  {
 
 .projectTable{
     border-collapse:separate; 
-    border-spacing:20px 20px; 
+    border-spacing:5px 20px; 
+    width: 100%;
+    margin-left: -30px;
 }
 
 .taskBox {
@@ -384,6 +386,13 @@ footer  {
     box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2), 0 2px 8px 0 rgba(0,0,0,0.19);
     height: 100px;
     text-align: left;
+    width: 100%;
+    -webkit-transition: height 4s ease;
+    -webkit-animation-duration: 4s;
+    -webkit-animation-delay: 2s;
+    transition: height 4s ease;
+    animation-duration: 4s;
+    animation-delay: 2s;
 }
 
 .taskBox h2{
@@ -402,7 +411,8 @@ footer  {
     margin-top: -20px;
     border-collapse:separate; 
     border-spacing:20px 20px; 
-    width: 2000px;
+    width: 100%;
+    margin-left: -40px;
 }
 
 .taskTable tr{
