--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,14 @@ footer  {
     text-decoration: none;
 }
 
+.projectTable{
+    margin-top: -10px;
+    border-collapse:separate; 
+    border-spacing:20px 20px; 
+    width: 100%;
+    margin-left: -40px;
+}
+
 .taskBox {
     background-color: #F4F5F7;
     border-radius: 0.4rem;
@@ -414,7 +422,7 @@ footer  {
 }
 
 .taskTable{
-    margin-top: -20px;
+    margin-top: -10px;
     border-collapse:separate; 
     border-spacing:20px 20px; 
     width: 100%;
