--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ footer  {
   transform: scale(1.2);
 }
 
-#newTask {
+#newTask, #newProject {
   position: fixed;
   left: 0;
   top: 0;
@@ -303,7 +303,7 @@ footer  {
   z-index: 999;
   transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
-#taskContent  {
+#taskContent, #projectContent  {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -337,7 +337,7 @@ footer  {
   padding-left:0;
 }
 
-#taskDone {
+#taskDone, #projectDone {
   float: center;
   width: 50px;
   height: 30px;
@@ -346,7 +346,7 @@ footer  {
   cursor: pointer;
 }
 
-#taskDone:hover{
+#taskDone, #projectDone:hover{
   background-color: darkgray;
   cursor: pointer;
 }
