--- a/css/form.css
+++ b/css/form.css
@@ -122,9 +122,6 @@ body{
 	color: #fff;
 	font-size: 150%;
 }
-.submitbtn:hover{
-	background-color: #1DE9B6;
-}
 .input {
 	position: relative;
 	z-index: 1;
@@ -140,6 +137,7 @@ body{
 	width: calc(100% - 2em);
 	vertical-align: top;
 }
+
 .input__field {
 	position: relative;
 	display: block;
@@ -199,7 +197,7 @@ body{
 	width: 100%;
 	height: calc(100% - 1em);
 	text-align: left;
-  cursor: text;
+    cursor: text;
 }
 
 .input__label-content--hoshi {
@@ -214,12 +212,10 @@ body{
 	left: 0;
 	width: 100%;
 	height: calc(100% - 10px);
-	border-bottom: 1px solid #B9C1CA;
 }
 
 .input__label--hoshi::after {
 	margin-top: 2px;
-	border-bottom: 4px solid red;
 	-webkit-transform: translate3d(-100%, 0, 0);
 	transform: translate3d(-100%, 0, 0);
 	-webkit-transition: -webkit-transform 0.3s;
@@ -227,7 +223,7 @@ body{
 }
 
 .input__label--hoshi-color-1::after {
-	border-color: #75B2E1;
+    border-bottom: 3px solid #75B2E1;
 }
 
 .input__field--hoshi:focus + .input__label--hoshi::after,
