--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ footer  {
   color: #000000;
   height: 2%;
 }
-.update {
+.update, #normalTheme, #darkTheme {
   border: 1px solid #999999;
   background-color: #999999;
   padding: 12px 12px;
@@ -221,6 +221,16 @@ footer  {
   box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2), 0 2px 8px 0 rgba(0,0,0,0.19);
   margin-bottom: 20px;
 }
+
+#normalTheme, #darkTheme {
+    width: 8vw;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 1rem;
+    background-color: #F4F5F7;
+    color: black;
+}
+
 .taskBox {
   border: 0px;
   background-color: #999999;
@@ -440,12 +450,4 @@ footer  {
     width: 100%;
     padding: 0;
     line-height: 10px;
-}
-
-#normalTheme, #darkTheme{
-    width: 30px;
-    height: 20px;
-    background-color: #F4F5F7;
-    color: black;
-    
 }
