--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Roboto';
+  font-family: 'Poppins';
   font-size: 14px;
   color: #999999;
 }
@@ -139,7 +139,6 @@ a:hover {
     width: calc(100% - 9vw);
     height: 5vh;
     margin-bottom: 1vh;
-    line-height: 50%;
 }
 .heading > h1 {
   color: "black";
@@ -462,11 +461,8 @@ footer  {
     padding: 0;
     line-height: 10px;
 }
-<<<<<<< HEAD
 
 button:focus {
     outline:0;
 }
 
-=======
->>>>>>> 8c66a299d7aebb38891a7e249f103495548ddae5
