--- a/css/style.css
+++ b/css/style.css
@@ -155,8 +155,8 @@ a:hover {
     margin-top: 2vw;
     font-size: 30px; /* Increased text to enable scrolling */
     width: calc(100% - 9vw);
-    height: 3vh;
     margin-bottom: 1vh;
+    padding-bottom: 5px;
     /*line-height: 60%;*/
 }
 
@@ -420,6 +420,11 @@ footer  {
     font-style: italic;
 }
 
+.projectBox > h2, h3, p{
+    padding: 3px 10px;
+    margin: 0px;
+}
+
 #projectTable{
     width: 100%;
     margin-left: -30px;
@@ -484,24 +489,13 @@ button:focus {
     outline:0;
 }
 
-#delete-button {
-    float: right;
-    height: 25px;
-    font-size: 15px;
-    text-align: center;
-    cursor: pointer;
-    padding-right: 50px;
-    background-color: #EDEFF2;
-    border: 1px solid #DFE1E5;
-}
-
 #complete-button {
-    float: center;
-    height: 25px;
+    float: right;
     font-size: 15px;
     text-align: center;
     cursor: pointer;
     padding-right: 50px;
     background-color: #EDEFF2;
     border: 1px solid #DFE1E5;
+    padding: 5px 7px;
 }
