--- a/css/dark-style.css
+++ b/css/dark-style.css
@@ -223,7 +223,7 @@ footer  {
   color: #000000;
   height: 2%;
 }
-.update, #normalTheme, #darkTheme {
+.update, #normalTheme, #darkTheme, #sidebarColor {
   border: 1px solid #5E616A;
   background-color: #5E616A;
   padding: 12px 12px;
@@ -239,13 +239,20 @@ footer  {
   margin-bottom: 20px;
 }
 
-#normalTheme, #darkTheme {
+#normalTheme, #darkTheme, #sidebarColor {
     width: 8vw;
     text-align: center;
     cursor: pointer;
     border-radius: 1rem;
     background-color: #444B55;
     color: white;
+}
+
+#sidebarColor {
+  width:2vw;
+  height:2vw;
+  padding: 2px 2px;
+  border-radius:4px;
 }
 
 .taskBox {
