--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ footer  {
   color: #000000;
   height: 2%;
 }
-.update, #normalTheme, #darkTheme {
+.update, #normalTheme, #darkTheme, #sidebarColor {
   border: 1px solid #999999;
   background-color: #999999;
   padding: 12px 12px;
@@ -240,13 +240,20 @@ footer  {
   margin-bottom: 20px;
 }
 
-#normalTheme, #darkTheme {
+#normalTheme, #darkTheme, #sidebarColor {
     width: 8vw;
     text-align: center;
     cursor: pointer;
     border-radius: 1rem;
     background-color: #F4F5F7;
     color: black;
+}
+
+#sidebarColor {
+  width:2vw;
+  height:2vw;
+  padding: 2px 2px;
+  border-radius:4px;
 }
 
 .taskBox {
